very cheap tricks to fix alignment issues on homepage

--- a/html/css/home.css
+++ b/html/css/home.css
@@ -14,6 +14,15 @@
     box-shadow: 0 0 8px #eee;
 }
 
+.thumbnail {
+    height: 250px;
+}
+
+.thumbnail img {
+    position: relative;
+    height: 240px;
+}
+
 .content {
     margin-top: 100px;
 }
